[gd_scene load_steps=3 format=3 uid="uid://ch3purv4oivig"]

[ext_resource type="Script" path="res://ui/combat/unit_inventory/combat_unit_inventory_selected_item_options.gd" id="1_x8whe"]
[ext_resource type="Theme" uid="uid://spqlmvt5day1" path="res://resources/themes/combat/unit_action_inventory/unit_action_inventory_enabled.tres" id="2_fm2v8"]

[node name="CombatUnitInventorySelectedItemOptions" type="Panel"]
custom_minimum_size = Vector2(200, 110)
offset_right = 200.0
offset_bottom = 105.0
script = ExtResource("1_x8whe")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(200, 0)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="EquipButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme = ExtResource("2_fm2v8")
text = "Equip"

[node name="UnEquipButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme = ExtResource("2_fm2v8")
text = "UnEquip"

[node name="UseButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme = ExtResource("2_fm2v8")
text = "Use"

[node name="ArrangeButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme = ExtResource("2_fm2v8")
text = "Arrange"

[node name="DiscardButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme = ExtResource("2_fm2v8")
text = "Discard"

[connection signal="pressed" from="VBoxContainer/EquipButton" to="." method="_on_equip_button_pressed"]
[connection signal="pressed" from="VBoxContainer/UnEquipButton" to="." method="_on_un_equip_button_pressed"]
[connection signal="pressed" from="VBoxContainer/UseButton" to="." method="_on_use_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ArrangeButton" to="." method="_on_arrange_button_pressed"]
[connection signal="pressed" from="VBoxContainer/DiscardButton" to="." method="_on_discard_button_pressed"]
